--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- index.php   -->
-    <title>RaijinETH: erc20</title>
+    <title>RaijinBSC: bep20</title>
     <base />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="raijinLogo.png" />
@@ -8482,7 +8482,7 @@
                                 <path _ngcontent-oob-c53="" id="Path_2" class="st1" d="M516.4,2260.9c558.2,406.1,1338.9,282.4,1744.6-276.2c154.5-214.4,238.9-472.1,238.9-735.9     c0-28.9-2.1-57.7-4.1-86.6C2040.7,1844.5,1198.2,2164,516.4,2260.9L516.4,2260.9z"></path>
                               </svg>
                             </a> -->
-                            <div style="font-size : 0.7rem">CA: ---</div>
+                            <div style="font-size : 0.7rem">CA: Coming Soon</div>
                           </div>
                         </app-follow>
                       </div>
@@ -8497,7 +8497,7 @@
                       <span _ngcontent-oob-c93="">
                         At Raijin Token we're revolutionizing the world of Memes & Cryptocurrency by Unleashing the Thunder of Blockchain and Meme Storm.<br><br>
                         Raijin is here to take over the memeverse (SHIBAINU, pepe, dogecoin, etc.) Raijin is not here to follow in their footsteps, we are here for others to follow in our footsteps because we are tired of hearing the same things every day from all the old memecoins. <br><br>
-                        The project combines both trends of cryptocurrency and Meme as a 2 in 1 Community, So Let’s raise Storms of memes, Let’s be strike those candles like Thunder… Let's be us RAIJIN !!
+                        The project combines both trends of cryptocurrency and Meme as a 2 in 1 Community, So Let’s raise Storms of memes, Let’s strike those candles like Thunder… Let's be us RAIJIN !!
                       </span>
                     </div>
                   </div>
@@ -8560,9 +8560,9 @@
                           <div _ngcontent-oob-c81="" class="item ng-star-inserted">
                             <div _ngcontent-oob-c81="" class="itemWrapper">
                               <div _ngcontent-oob-c81="" class="label">
-                                <img _ngcontent-oob-c81="" src="assets/img/icons/play2.png" alt="" class="itemIcon" /> TOKEN SUPPLY
+                                <img _ngcontent-oob-c81="" src="assets/img/icons/play2.png" alt="" class="itemIcon" />SUPPLY
                               </div>
-                              <div _ngcontent-oob-c81="" class="button" style="border: 0px;"> 42,069,000,000,0000  </div>
+                              <div _ngcontent-oob-c81="" class="button" style="border: 0px;"> 42 Trillion  </div>
                             </div>
                           </div>
                           <div _ngcontent-oob-c81="" class="item ng-star-inserted">
@@ -8592,7 +8592,7 @@
                           <div _ngcontent-oob-c81="" class="item ng-star-inserted">
                             <div _ngcontent-oob-c81="" class="itemWrapper">
                               <div _ngcontent-oob-c81="" class="label">
-                                <img _ngcontent-oob-c81="" src="assets/img/icons/play2.png" alt="" class="itemIcon" /> DEVELOPMENT/MARKETING
+                                <img _ngcontent-oob-c81="" src="assets/img/icons/play2.png" alt="" class="itemIcon" /> MARKETING
                               </div>
                               <div _ngcontent-oob-c81="" class="button" style="border: 0px;"> 15% </div>
                             </div>
@@ -8620,7 +8620,7 @@
                     </div>
                     <!---->
                   </app-film-watch-section>
-                  <div _ngcontent-oob-c93="" class="about ng-star-inserted">
+                  <!-- <div _ngcontent-oob-c93="" class="about ng-star-inserted">
                     <div _ngcontent-oob-c93="" class="header">
                       <span _ngcontent-oob-c93="">HOW TO BUY <span _ngcontent-oob-c93="" class="line"></span>
                       </span>
@@ -8664,7 +8664,7 @@
                         </a>
                       </div>
                     </app-spotify-promo>
-                  </div>
+                  </div> -->
                   <!---->
                   <!---->
                 </div>
@@ -8849,7 +8849,7 @@
                     <!---->
                   </div>
                 </div>
-                <div _ngcontent-oob-c126="" class="item ng-star-inserted" style="
+                <!-- <div _ngcontent-oob-c126="" class="item ng-star-inserted" style="
                     translate: none;
                     rotate: none;
                     scale: none;
@@ -8859,12 +8859,9 @@
                   <div _ngcontent-oob-c126="" class="button">
                     <a _ngcontent-oob-c126="" class="link ng-star-inserted" href="buy.html" style="pointer-events: all">
                       <div _ngcontent-oob-c126="" class="label">Buy Now</div>
-                      <!---->
                     </a>
-                    <!---->
-                    <!---->
                   </div>
-                </div>
+                </div> -->
                 <div _ngcontent-oob-c126="" class="item ng-star-inserted" style="
                     translate: none;
                     rotate: none;
@@ -8948,7 +8945,7 @@
         <app-menu-button _ngcontent-oob-c125="" _nghost-oob-c122="">
           <div _ngcontent-oob-c122="" class="wrapper"></div>
         </app-menu-button>
-        <app-tickets-image-button _ngcontent-oob-c125="" _nghost-oob-c124="">
+        <!-- <app-tickets-image-button _ngcontent-oob-c125="" _nghost-oob-c124="">
           <div _ngcontent-oob-c124="" class="buyTickets">
             <a _ngcontent-oob-c124="" href="" target="_blank">
               <div _ngcontent-oob-c124="" class="bg">
@@ -8957,7 +8954,7 @@
               <div _ngcontent-oob-c124="" class="text">BUY NOW</div>
             </a>
           </div>
-        </app-tickets-image-button>
+        </app-tickets-image-button> -->
       </app-header>
       <!---->
       <app-share-page _ngcontent-oob-c134="" class="ng-tns-c134-0" _nghost-oob-c129="" style="opacity: 0; visibility: hidden; display: none">
