--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       .header[_ngcontent-oob-c126] {
         position: relative;
         width: 100%;
-        border-bottom: solid 2px #14F195;
+        border-bottom: solid 2px #8a14f1;
         padding-bottom: 20px;
         margin-bottom: 30px;
         margin-top: 10px;
@@ -422,7 +422,7 @@
       .button[_ngcontent-oob-c126] {
         position: relative;
         width: 100%;
-        color: #14F195;
+        color: #8a14f1;
         margin-top: 15px;
         text-align: center;
       }
@@ -472,7 +472,7 @@
         position: relative;
         font-family: bankgothic_md_btmedium, serif;
         font-size: 24px;
-        color: #14F195;
+        color: #8a14f1;
         margin-top: -5px;
       }
 
@@ -493,7 +493,7 @@
       .footer[_ngcontent-oob-c126] {
         display: none;
         width: 100%;
-        border-top: solid 2px #14F195;
+        border-top: solid 2px #8a14f1;
         padding-top: 20px;
         position: absolute;
         bottom: 0;
@@ -654,7 +654,7 @@
       .line[_ngcontent-oob-c126] {
         width: 100%;
         height: 2px;
-        background-color: #14F195;
+        background-color: #8a14f1;
         margin-top: 50px;
       }
     </style>
@@ -1368,7 +1368,7 @@
         width: 100%;
         font-size: 32px;
         font-weight: 700;
-        color: #14F195;
+        color: #8a14f1;
       }
 
       @media only screen and (max-width: 640px) {
@@ -1390,7 +1390,7 @@
         position: absolute !important;
         width: 100%;
         height: 2px;
-        background: #14F195;
+        background: #8a14f1;
         bottom: 0;
         margin-left: 0 !important;
         left: 0;
@@ -1431,7 +1431,7 @@
       }
 
       .closeButton[_ngcontent-oob-c131]:hover {
-        border-color: #14F195;
+        border-color: #8a14f1;
       }
 
       .closeImg[_ngcontent-oob-c131] {
@@ -1598,7 +1598,7 @@
         width: 10px;
         height: 10px;
         border-radius: 50%;
-        background: #14F195;
+        background: #8a14f1;
       }
 
       @media screen and (max-width: 640px) {
@@ -2066,7 +2066,7 @@
       .social[_ngcontent-oob-c53]
         svg[_ngcontent-oob-c53]
         circle[_ngcontent-oob-c53] {
-        fill: #14F195 !important;
+        fill: #8a14f1 !important;
       }
 
       .menu[_ngcontent-oob-c53]
@@ -2081,7 +2081,7 @@
         .social[_ngcontent-oob-c53]
         svg[_ngcontent-oob-c53]
         circle[_ngcontent-oob-c53] {
-        fill: #14F195 !important;
+        fill: #8a14f1 !important;
       }
 
       .social[_ngcontent-oob-c53]:hover
@@ -2632,7 +2632,7 @@
       }
 
       .wrapper[_ngcontent-oob-c123]:hover {
-        border-color: #14F195;
+        border-color: #8a14f1;
       }
 
       .bg[_ngcontent-oob-c123] {
@@ -2734,7 +2734,7 @@
       }
 
       .mainCast[_ngcontent-oob-c93]:hover {
-        color: #14F195;
+        color: #8a14f1;
       }
 
       .shareButton[_ngcontent-oob-c93] {
@@ -3292,7 +3292,7 @@
           font-size: 28px;
           letter-spacing: 2px;
           width: 100%;
-          color: #14F195;
+          color: #8a14f1;
         }
 
         @media screen and (max-width: 640px) {
@@ -3312,7 +3312,7 @@
           width: 75px;
           height: 3px;
           bottom: -7px;
-          background: #14F195;
+          background: #8a14f1;
         }
 
         .about[_ngcontent-oob-c93] .subHeader[_ngcontent-oob-c93] {
@@ -3592,7 +3592,7 @@
           font-size: 28px;
           letter-spacing: 2px;
           width: 100%;
-          color: #14F195;
+          color: #8a14f1;
         }
 
         @media screen and (max-width: 640px) {
@@ -3612,7 +3612,7 @@
           width: 75px;
           height: 3px;
           bottom: -7px;
-          background: #14F195;
+          background: #8a14f1;
         }
 
         .castText[_ngcontent-oob-c93] .castGrid[_ngcontent-oob-c93] {
@@ -3708,7 +3708,7 @@
           font-family: bankgothic_md_btmedium, serif;
           font-size: 22px;
           line-height: 45px;
-          color: #14F195;
+          color: #8a14f1;
         }
 
         @media screen and (max-width: 640px) {
@@ -4419,7 +4419,7 @@
         position: relative;
         display: inline-block;
         vertical-align: middle;
-        color: #14F195;
+        color: #8a14f1;
       }
 
       .labelBlue[_ngcontent-oob-c51] {
@@ -4480,7 +4480,7 @@
         position: relative;
         display: inline-block;
         vertical-align: middle;
-        color: #14F195;
+        color: #8a14f1;
       }
 
       .icon[_ngcontent-oob-c52] img[_ngcontent-oob-c52] {
@@ -4594,7 +4594,7 @@
       }
 
       .title[_ngcontent-oob-c54] span[_ngcontent-oob-c54]:first-child {
-        color: #14F195;
+        color: #8a14f1;
         margin-left: 5px;
         position: relative;
         display: inline-block;
@@ -4625,7 +4625,7 @@
         position: absolute !important;
         width: 100%;
         height: 2px;
-        background: #14F195;
+        background: #8a14f1;
         bottom: 1px;
         left: -2px;
         margin-left: 0 !important;
@@ -4713,7 +4713,7 @@
       }
 
       .title[_ngcontent-oob-c55] span[_ngcontent-oob-c55]:first-child {
-        color: #14F195;
+        color: #8a14f1;
         margin-left: 5px;
         position: relative;
         display: inline-block;
@@ -4744,7 +4744,7 @@
         position: absolute !important;
         width: 100%;
         height: 2px;
-        background: #14F195;
+        background: #8a14f1;
         bottom: 1px;
         left: -2px;
         margin-left: 0 !important;
@@ -4780,7 +4780,7 @@
         display: table;
         left: 50%;
         transform: translate(-50%);
-        color: #14F195;
+        color: #8a14f1;
         font-size: 30px;
         font-family: bankgothic_md_btmedium, serif;
       }
@@ -4795,7 +4795,7 @@
         width: 75px;
         height: 3px;
         bottom: -7px;
-        background: #14F195;
+        background: #8a14f1;
         left: 0;
         right: 0;
         margin: auto;
@@ -4940,7 +4940,7 @@
       .description[_ngcontent-oob-c87] {
         font-size: 18px;
         margin-top: 10px;
-        color: #14F195;
+        color: #8a14f1;
         text-align: center;
       }
 
@@ -4995,7 +4995,7 @@
         width: 9px;
         height: 9px;
         border-radius: 50%;
-        background: #14F195;
+        background: #8a14f1;
         vertical-align: middle;
       }
 
@@ -5012,7 +5012,7 @@
         position: absolute;
         margin: 0 20px;
         cursor: pointer;
-        border: solid 1px #14F195;
+        border: solid 1px #8a14f1;
         border-radius: 0%;
         width: 76px;
         height: 76px;
@@ -5103,7 +5103,7 @@
         vertical-align: top;
         width: 80px;
         height: 80px;
-        border: solid 3px #14F195;
+        border: solid 3px #8a14f1;
         border-radius: 50%;
         z-index: 1;
         margin-right: 25px;
@@ -5113,7 +5113,7 @@
         .videoContentIcon[_ngcontent-oob-c87] {
           width: 40px;
           height: 40px;
-          border: solid 2px #14F195;
+          border: solid 2px #8a14f1;
           margin-left: 20px;
           margin-right: 10px;
         }
@@ -5139,8 +5139,8 @@
         svg[_ngcontent-oob-c87]
         path[_ngcontent-oob-c87] {
         fill: #0000;
-        border: solid 1px #14F195;
-        stroke: #14F195;
+        border: solid 1px #8a14f1;
+        stroke: #8a14f1;
       }
 
       .videoContentIcon[_ngcontent-oob-c87] a[_ngcontent-oob-c87] {
@@ -5293,7 +5293,7 @@
         .title[_ngcontent-oob-c91] {
         font-family: bankgothic_md_btmedium;
         font-size: 35px;
-        color: #14F195;
+        color: #8a14f1;
         padding-top: 100px;
         padding-bottom: 10px;
       }
@@ -5313,7 +5313,7 @@
         .titleLine[_ngcontent-oob-c91] {
         width: 40%;
         height: 7px;
-        background-color: #14F195;
+        background-color: #8a14f1;
         margin-bottom: 90px;
       }
 
@@ -5821,7 +5821,7 @@
         font-size: 30px;
         font-family: bankgothic_md_btmedium, serif;
         letter-spacing: 1px;
-        color: #14F195;
+        color: #8a14f1;
         padding-bottom: 50px;
       }
 
@@ -5843,7 +5843,7 @@
         width: 50%;
         height: 3px;
         bottom: -5px;
-        background: #14F195;
+        background: #8a14f1;
       }
 
       .slider[_ngcontent-oob-c86] {
@@ -5926,7 +5926,7 @@
         position: absolute;
         margin: 0 20px;
         cursor: pointer;
-        border: solid 1px #14F195;
+        border: solid 1px #8a14f1;
         border-radius: 0%;
         width: 76px;
         height: 76px;
@@ -6340,7 +6340,7 @@
         font-weight: 700;
         font-size: 30px;
         font-family: bankgothic_md_btmedium, serif;
-        color: #14F195;
+        color: #8a14f1;
         position: relative;
         display: inline;
         top: -55px;
@@ -6360,7 +6360,7 @@
         position: absolute;
         bottom: -5px;
         height: 3px;
-        background-color: #14F195;
+        background-color: #8a14f1;
       }
 
       @media screen and (max-width: 640px) {
@@ -6441,7 +6441,7 @@
         display: table;
         left: 50%;
         transform: translate(-50%);
-        color: #14F195;
+        color: #8a14f1;
         font-size: 30px;
         font-family: bankgothic_md_btmedium, serif;
       }
@@ -6456,7 +6456,7 @@
         width: 75px;
         height: 3px;
         bottom: -7px;
-        background: #14F195;
+        background: #8a14f1;
         left: 0;
         right: 0;
         margin: auto;
@@ -6564,7 +6564,7 @@
         display: inline-block;
         width: 100%;
         height: 2px;
-        background: #14F195;
+        background: #8a14f1;
         margin-top: 20px;
       }
 
@@ -6583,7 +6583,7 @@
       .description[_ngcontent-oob-c79] {
         font-size: 16px;
         margin-top: 10px;
-        color: #14F195;
+        color: #8a14f1;
         font-family: gotham-book, sans-serif;
       }
 
@@ -6595,7 +6595,7 @@
 
       .btnView[_ngcontent-oob-c79] {
         padding: 10px 50px;
-        border: solid 1px #14F195;
+        border: solid 1px #8a14f1;
         border-radius: 0;
         cursor: pointer;
         margin-top: 30px;
@@ -6606,7 +6606,7 @@
         left: 50%;
         transform: translate(-50%);
         background: none;
-        color: #14F195;
+        color: #8a14f1;
         font-family: bankgothic_md_btmedium, serif;
       }
 
@@ -6639,7 +6639,7 @@
         width: 9px;
         height: 9px;
         border-radius: 50%;
-        background: #14F195;
+        background: #8a14f1;
         vertical-align: middle;
       }
 
@@ -6656,7 +6656,7 @@
         position: absolute;
         margin: 0 20px;
         cursor: pointer;
-        border: solid 1px #14F195;
+        border: solid 1px #8a14f1;
         border-radius: 0%;
         width: 76px;
         height: 76px;
@@ -6680,7 +6680,7 @@
         display: inline-block;
         margin: 0 20px;
         cursor: pointer;
-        border: solid 1px #14F195;
+        border: solid 1px #8a14f1;
         border-radius: 50%;
         width: 76px;
         height: 76px;
@@ -6875,7 +6875,7 @@
         .content[_ngcontent-oob-c90]
         .title[_ngcontent-oob-c90]
         .onOff[_ngcontent-oob-c90]:hover {
-        color: #14F195;
+        color: #8a14f1;
       }
 
       .GoldRosePage[_ngcontent-oob-c90]
@@ -7007,7 +7007,7 @@
         position: relative;
         width: 30px;
         height: 30px;
-        border: solid 2px #14F195;
+        border: solid 2px #8a14f1;
         border-radius: 50%;
         pointer-events: all;
         cursor: pointer;
@@ -7041,7 +7041,7 @@
 
       .iconPlay[_ngcontent-oob-c56] path[_ngcontent-oob-c56],
       .iconPause[_ngcontent-oob-c56] path[_ngcontent-oob-c56] {
-        fill: #14F195;
+        fill: #8a14f1;
       }
 
       .iconPlay[_ngcontent-oob-c56] svg[_ngcontent-oob-c56] {
@@ -7124,7 +7124,7 @@
         font-size: 30px;
         font-family: bankgothic_md_btmedium, serif;
         letter-spacing: 1px;
-        color: #14F195;
+        color: #8a14f1;
       }
 
       @media screen and (max-width: 640px) {
@@ -7144,7 +7144,7 @@
         transform: translate(-50%);
         width: 75px;
         height: 3px;
-        background: #14F195;
+        background: #8a14f1;
       }
 
       .content[_ngcontent-oob-c84] {
@@ -7341,7 +7341,7 @@
         font-size: 30px;
         font-family: bankgothic_md_btmedium, serif;
         letter-spacing: 1px;
-        color: #14F195;
+        color: #8a14f1;
       }
 
       .header[_ngcontent-oob-c85] > span[_ngcontent-oob-c85] {
@@ -7355,7 +7355,7 @@
         width: 75px;
         height: 3px;
         bottom: -7px;
-        background: #14F195;
+        background: #8a14f1;
       }
 
       .scrollBarHide[_ngcontent-oob-c85] {
@@ -9262,7 +9262,7 @@
                       <img _ngcontent-oob-c93="" alt="" src="raijinLogo.png" />
                     </div>
                   </div>
-                  <h1 style="color: #14F195; font-size: 48px;">RAIJIN TOKEN</h1>
+                  <h1 style="color: #8a14f1; font-size: 48px;">RAIJIN TOKEN</h1>
                   <h4>Unleashing the Thunder of Blockchain… Join the storm</h4>
                   <p>
                     Welcome to RAIJIN TOKEN, a Meme Token based of Japanese God
@@ -9399,7 +9399,7 @@
                                 src="raijinLogo.png"
                                 style="width: 300px; margin-left: auto; margin-right: auto;"
                               />
-                              <h1 style="color: #14F195; font-size: 40px; margin-left: auto; margin-right: auto;">TOKENOMICS</h1>
+                              <h1 style="color: #8a14f1; font-size: 40px; margin-left: auto; margin-right: auto;">TOKENOMICS</h1>
                             </div>
                           </div>
                         </div>
@@ -9409,7 +9409,7 @@
                             class="item ng-star-inserted"
                           >
                             <div _ngcontent-oob-c81="" class="itemWrapper">
-                              <div _ngcontent-oob-c81="" class="label" style="color:#14F195">
+                              <div _ngcontent-oob-c81="" class="label" style="color:#8a14f1">
                                 <img
                                   _ngcontent-oob-c81=""
                                   src="assets/img/icons/play2.png"
@@ -9431,7 +9431,7 @@
                             class="item ng-star-inserted"
                           >
                             <div _ngcontent-oob-c81="" class="itemWrapper">
-                              <div _ngcontent-oob-c81="" class="label" style="color:#14F195">
+                              <div _ngcontent-oob-c81="" class="label" style="color:#8a14f1">
                                 <img
                                   _ngcontent-oob-c81=""
                                   src="assets/img/icons/play2.png"
@@ -9454,7 +9454,7 @@
                             class="item ng-star-inserted"
                           >
                             <div _ngcontent-oob-c81="" class="itemWrapper">
-                              <div _ngcontent-oob-c81="" class="label" style="color:#14F195">
+                              <div _ngcontent-oob-c81="" class="label" style="color:#8a14f1">
                                 <img
                                   _ngcontent-oob-c81=""
                                   src="assets/img/icons/play2.png"
@@ -9477,7 +9477,7 @@
                             class="item ng-star-inserted"
                           >
                             <div _ngcontent-oob-c81="" class="itemWrapper">
-                              <div _ngcontent-oob-c81="" class="label" style="color:#14F195">
+                              <div _ngcontent-oob-c81="" class="label" style="color:#8a14f1">
                                 <img
                                   _ngcontent-oob-c81=""
                                   src="assets/img/icons/play2.png"
@@ -9500,7 +9500,7 @@
                             class="item ng-star-inserted"
                           >
                             <div _ngcontent-oob-c81="" class="itemWrapper">
-                              <div _ngcontent-oob-c81="" class="label" style="color:#14F195">
+                              <div _ngcontent-oob-c81="" class="label" style="color:#8a14f1">
                                 <img
                                   _ngcontent-oob-c81=""
                                   src="assets/img/icons/play2.png"
@@ -9523,7 +9523,7 @@
                             class="item ng-star-inserted"
                           >
                             <div _ngcontent-oob-c81="" class="itemWrapper">
-                              <div _ngcontent-oob-c81="" class="label" style="color:#14F195">
+                              <div _ngcontent-oob-c81="" class="label" style="color:#8a14f1">
                                 <img
                                   _ngcontent-oob-c81=""
                                   src="assets/img/icons/play2.png"
@@ -9546,7 +9546,7 @@
                             class="item ng-star-inserted"
                           >
                             <div _ngcontent-oob-c81="" class="itemWrapper">
-                              <div _ngcontent-oob-c81="" class="label" style="color:#14F195">
+                              <div _ngcontent-oob-c81="" class="label" style="color:#8a14f1">
                                 <img
                                   _ngcontent-oob-c81=""
                                   src="assets/img/icons/play2.png"
