--- a/index.html
+++ b/index.html
@@ -10032,7 +10032,7 @@
                       <div _ngcontent-oob-c53="" class="label">Social</div>
                       <a
                         _ngcontent-oob-c53=""
-                        href="https://t.me/hunger_jeet_games"
+                        href="https://t.me/RaijinTokenOfficial"
                         target="_blank"
                         class="social socialFilm"
                       >
@@ -10057,7 +10057,7 @@
                       </a>
                       <a
                         _ngcontent-oob-c53=""
-                        href="https://twitter.com/HUNGERJEETGAMES"
+                        href="https://x.com/raijin_sol?t=2WNajP_A7qie_yZG546-uQ&s=09"
                         target="_blank"
                         class="social socialFilm"
                       >
