--- a/index.html
+++ b/index.html
@@ -9279,7 +9279,7 @@
                             </div>
                             <a
                               _ngcontent-oob-c53=""
-                              href="#"
+                              href="https://t.me/RaijinTokenOfficial"
                               target="_blank"
                               class="social"
                             >
@@ -9306,7 +9306,7 @@
                             </a>
                             <a
                               _ngcontent-oob-c53=""
-                              href="#"
+                              href="https://x.com/raijin_sol?t=2WNajP_A7qie_yZG546-uQ&s=09"
                               target="_blank"
                               class="social"
                             >
