--- a/index.html
+++ b/index.html
@@ -9262,7 +9262,7 @@
                       <img _ngcontent-oob-c93="" alt="" src="raijinLogo.png" />
                     </div>
                   </div>
-                  <h1 style="color: #14f1cc; font-size: 48px;">RAIJIN TOKEN</h1>
+                  <h1 style="color: #14f1cc; font-size: 48px;">RAIJIN TOKEN <br> RAI</h1>
                   <h4>Unleashing the Thunder of Blockchain… Join the storm</h4>
                   <p>
                     Welcome to RAIJIN TOKEN, a Meme Token based of Japanese God
@@ -9274,9 +9274,6 @@
                       <div _ngcontent-oob-c93="" class="followWrapper">
                         <app-follow _ngcontent-oob-c93="" _nghost-oob-c53="">
                           <div _ngcontent-oob-c53="" class="wrapper">
-                            <div _ngcontent-oob-c53="" class="label">
-                              FOLLOW
-                            </div>
                             <a
                               _ngcontent-oob-c53=""
                               href="https://t.me/RaijinTokenOfficial"
@@ -9422,7 +9419,7 @@
                                 class="button"
                                 style="border: 0px"
                               >
-                                42 Trillion
+                                1 Billion
                               </div>
                             </div>
                           </div>
@@ -9445,30 +9442,7 @@
                                 class="button"
                                 style="border: 0px"
                               >
-                                5%
-                              </div>
-                            </div>
-                          </div>
-                          <div
-                            _ngcontent-oob-c81=""
-                            class="item ng-star-inserted"
-                          >
-                            <div _ngcontent-oob-c81="" class="itemWrapper">
-                              <div _ngcontent-oob-c81="" class="label" style="color:#14f1cc">
-                                <img
-                                  _ngcontent-oob-c81=""
-                                  src="assets/img/icons/play2.png"
-                                  alt=""
-                                  class="itemIcon"
-                                />
-                                PRESALE
-                              </div>
-                              <div
-                                _ngcontent-oob-c81=""
-                                class="button"
-                                style="border: 0px"
-                              >
-                                30%
+                                7%
                               </div>
                             </div>
                           </div>
@@ -9508,29 +9482,6 @@
                                   class="itemIcon"
                                 />
                                 MARKETING
-                              </div>
-                              <div
-                                _ngcontent-oob-c81=""
-                                class="button"
-                                style="border: 0px"
-                              >
-                                15%
-                              </div>
-                            </div>
-                          </div>
-                          <div
-                            _ngcontent-oob-c81=""
-                            class="item ng-star-inserted"
-                          >
-                            <div _ngcontent-oob-c81="" class="itemWrapper">
-                              <div _ngcontent-oob-c81="" class="label" style="color:#14f1cc">
-                                <img
-                                  _ngcontent-oob-c81=""
-                                  src="assets/img/icons/play2.png"
-                                  alt=""
-                                  class="itemIcon"
-                                />
-                                CEX
                               </div>
                               <div
                                 _ngcontent-oob-c81=""
